# ptera

./: .editorconfig  .gitignore  .hlint.yaml  LICENSE  README.md  cabal.project
.github/ISSUE_TEMPLATE/: REPRODUCIBLE_BUG_REPORT.md
.github/workflows/: haskell.yml
example/haskell2010/: example-haskell2010.cabal  output-srb.hs
example/haskell2010/app/: Main.hs
example/haskell2010/input/: Sample.hs  Sample001.hs  Sample002.hs  Sample003.hs  Sample004.hs  example.hs
example/haskell2010/src/: Lexer.hs  Parser.hs  Types.hs
example/haskell2010/src/Lexer/: CodeUnit.hs  Layout.hs  PreprocessLayout.hs  Rules.hs
example/haskell2010/src/Parser/: Debug.hs  Rules.hs
example/haskell2010/test/spec/: InputSpec.hs  ParserSpec.hs
example/haskell2010/test/spec/Lexer/: CodeUnitSpec.hs
example/small-lang/: sample-input.txt  small-lang.cabal
example/small-lang-th/: sample-input.txt  small-lang-th.cabal
example/small-lang-th/src/: Lexer.hs  Parser.hs  Types.hs
example/small-lang-th/src/Lexer/: Rules.hs
example/small-lang-th/src/Parser/: Debug.hs  Rules.hs
example/small-lang-th/test/spec/: ParserSpec.hs
example/small-lang/app/: Main.hs
example/small-lang/src/: Lexer.hs  Parser.hs  Types.hs
example/small-lang/src/Lexer/: Rules.hs
example/small-lang/src/Parser/: Debug.hs  Rules.hs
example/small-lang/test/spec/: ParserSpec.hs
package/ptera/: LICENSE  README.md  Setup.hs  ptera.cabal
package/ptera-core/: README.md  ptera-core.cabal
package/ptera-core/src/Language/Parser/Ptera/: Prelude.hs
package/ptera-core/src/Language/Parser/Ptera/Data/: Alignable.hs  HFList.hs
package/ptera-core/src/Language/Parser/Ptera/Data/Alignable/: Array.hs  Map.hs
package/ptera-core/src/Language/Parser/Ptera/Data/IntMap/: GreaterRestriction.hs
package/ptera-core/src/Language/Parser/Ptera/Data/Symbolic/: IntMap.hs
package/ptera-core/src/Language/Parser/Ptera/Machine/: LAPEG.hs  PEG.hs  SRB.hs
package/ptera-core/src/Language/Parser/Ptera/Machine/LAPEG/: Builder.hs  RuleBuilder.hs
package/ptera-core/src/Language/Parser/Ptera/Machine/PEG/: Builder.hs
package/ptera-core/src/Language/Parser/Ptera/Machine/SRB/: Builder.hs
package/ptera-core/src/Language/Parser/Ptera/Pipeline/: Grammar2PEG.hs  LAPEG2SRB.hs  PEG2LAPEG.hs  PEG2SRB.hs
package/ptera-core/src/Language/Parser/Ptera/Prelude/: Alias.hs  Core.hs  Debug.hs
package/ptera-core/src/Language/Parser/Ptera/Syntax/: Grammar.hs
package/ptera-core/test/doctest/: Doctest.hs
package/ptera-core/test/spec/Language/Parser/Ptera/Data/IntMap/: GreaterRestrictionSpec.hs
package/ptera-core/test/spec/Language/Parser/Ptera/Data/Symbolic/: IntMapSpec.hs
package/ptera-th/: README.md  ptera-th.cabal
package/ptera-th/src/Language/Parser/Ptera/: TH.hs
package/ptera-th/src/Language/Parser/Ptera/TH/: ParserLib.hs  Syntax.hs  Util.hs
package/ptera-th/src/Language/Parser/Ptera/TH/Class/: LiftType.hs
package/ptera-th/src/Language/Parser/Ptera/TH/Data/Bits/: MaxBit.hs
package/ptera-th/src/Language/Parser/Ptera/TH/Pipeline/: Grammar2ParserDec.hs  SRB2ParserDec.hs
package/ptera-th/test/spec/Language/Parser/Ptera/TH/: UtilSpec.hs
package/ptera-util/: README.md  ptera-util.cabal
package/ptera-util/src/Language/Parser/Ptera/: Util.hs
package/ptera/src/Language/Parser/: Ptera.hs
package/ptera/src/Language/Parser/Ptera/: Runner.hs  Scanner.hs  Syntax.hs
package/ptera/src/Language/Parser/Ptera/Data/: Alignable.hs  HEnum.hs  HList.hs  Member.hs  NonEmptyBag.hs  OpenEnum.hs  OpenUnion.hs  Record.hs  TypeOps.hs
package/ptera/src/Language/Parser/Ptera/Data/Alignable/: Array.hs  Graph.hs  Map.hs  Set.hs
package/ptera/src/Language/Parser/Ptera/Data/Symbolic/: IntMap.hs  IntSet.hs
package/ptera/src/Language/Parser/Ptera/Machine/: LAPEG.hs  PEG.hs  SRB.hs  SSRB.hs
package/ptera/src/Language/Parser/Ptera/Machine/LAPEG/: Builder.hs  LAPEBuilder.hs  RuleBuilder.hs
package/ptera/src/Language/Parser/Ptera/Machine/PEG/: Builder.hs
package/ptera/src/Language/Parser/Ptera/Machine/SRB/: Builder.hs
package/ptera/src/Language/Parser/Ptera/Machine/SSRB/: Builder.hs
package/ptera/src/Language/Parser/Ptera/Pipeline/: Grammar2PEG.hs  Grammar2Parser.hs  Grammar2Runner.hs  LAPEG2SRB.hs  PEG2LAPEG.hs  PEG2SSRB.hs  SRB2Parser.hs  SafeGrammar2SRB.hs
package/ptera/src/Language/Parser/Ptera/Prelude/: Core.hs
package/ptera/src/Language/Parser/Ptera/Runner/: Parser.hs  RunT.hs
package/ptera/src/Language/Parser/Ptera/Syntax/: Grammar.hs  GrammarToken.hs  SafeGrammar.hs  SafeRule.hs
script/: lint-fix.bash  publish.bash
