cabal-version:      2.4
name:               example-haskell2010
version:            0.1.0.0

author:             Mizunashi Mana
maintainer:         mizunashi-mana@noreply.git

--executable haskell2010-exe
--    main-is:          Main.hs
--    hs-source-dirs:   app
--
--    default-language: Haskell2010
--
--    build-depends:
--        base,
--        example-haskell2010,
--        bytestring,

library
    default-language: Haskell2010

    hs-source-dirs:
        src
    exposed-modules:
        Types
        Lexer
        Lexer.Rules
        --Parser
        --Parser.Rules

    build-depends:
        base,
        ptera-th,
        ptera,
        ptera-core,
        bytestring,
        tlex,
        tlex-encoding,
        tlex-th,
        charset,
        template-haskell,

test-suite spec
    default-language: Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/spec
    main-is:
        HSpecDriver.hs
    ghc-options:
        -Wno-missing-home-modules
    build-tool-depends:
        hspec-discover:hspec-discover,
    build-depends:
        base,
        small-lang,
        bytestring,

        hspec,
        QuickCheck,
