cabal-version:      2.4
name:               example-haskell2010
version:            0.1.0.0

author:             Mizunashi Mana
maintainer:         mizunashi-mana@noreply.git

executable haskell2010-exe
    main-is:          Main.hs
    hs-source-dirs:   app

    default-language: Haskell2010

    build-depends:
        base,
        example-haskell2010,
        text,

library
    default-language: Haskell2010

    hs-source-dirs:
        src
    exposed-modules:
        Types
        Lexer
        Lexer.CodeUnit
        Lexer.Rules
        Lexer.PreprocessLayout
        Parser
        Parser.Rules
        Parser.Debug

    build-depends:
        base,
        ptera-th,
        ptera,
        ptera-core,
        tlex,
        tlex-th,
        text,
        enummapset-th,
        membership,
        charset,
        containers,
        transformers,
        template-haskell,

test-suite spec
    default-language: Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/spec
    main-is:
        HSpecDriver.hs
    ghc-options:
        -Wno-missing-home-modules
    build-tool-depends:
        hspec-discover:hspec-discover,
    build-depends:
        base,
        example-haskell2010,
        charset,
        enummapset-th,

        hspec,
        QuickCheck,
