cabal-version:      2.4
name:               small-lang-th
version:            0.1.0.0

author:             Mizunashi Mana
maintainer:         mizunashi-mana@noreply.git

executable small-lang-th-exe
    main-is:          Main.hs
    hs-source-dirs:   app

    default-language: Haskell2010

    build-depends:
        base,
        small-lang-th,
        bytestring,

library
    default-language: Haskell2010

    hs-source-dirs:
        src
    exposed-modules:
        Types
        Parser
        Parser.Rules
        Lexer
        Lexer.Rules

    build-depends:
        base,
        ptera-th,
        ptera,
        bytestring,
        tlex,
        tlex-encoding,
        tlex-th,
        charset,
        template-haskell,

test-suite spec
    default-language: Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/spec
    main-is:
        HSpecDriver.hs
    ghc-options:
        -Wno-missing-home-modules
    build-tool-depends:
        hspec-discover:hspec-discover,
    build-depends:
        base,
        small-lang-th,
        bytestring,

        hspec,
        QuickCheck,
