cabal-version:      2.4
name:               small-lang
version:            0.1.0.0

author:             Mizunashi Mana
maintainer:         mizunashi-mana@noreply.git

executable small-lang-exe
    main-is:          Main.hs
    hs-source-dirs:   app

    default-language: Haskell2010

    build-depends:
        base,
        small-lang,
        bytestring,

library
    default-language: Haskell2010

    hs-source-dirs:
        src
    exposed-modules:
        Types
        Parser
        Parser.Rules
        Parser.Debug
        Lexer
        Lexer.Rules

    build-depends:
        base,
        ptera,
        ptera-core,
        bytestring,
        tlex,
        tlex-encoding,
        tlex-th,
        charset,
        template-haskell,
